2014-06-24  Vanessa Gil <vanessa.gil@artica.es>

	* util/recon_scripts/snmpdevices.pl: Deleted file.

2014-06-17  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Removed an unused module.

	* util/recon_scripts/snmp-recon.pl: Always perform a brute-force network scan.
	  Connect hosts via traceroute if no L2 information is available.

2014-06-17  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed bug
	scheduling downtime.

2014-06-17 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/PluginServer.pm: Fixed to handle plugin's
	output that includes multibyte character string.

2014-05-15  Junichi Satoh <junichi@rworks.jp>

	* util/pandora_manage.pl: Fixed typo.

2014-05-15  Junichi Satoh <junichi@rworks.jp>

	* util/pandora_manage.pl: Added support for 'each_ff' and 'ff_timeout' 
	to module creation and modifying options.
	Fixed bug that 'enable_unkown_events' cannot be set by module creation
	options.

2014-06-14  Akihiro Uchida <auchida@rworks.jp>

	* pandora_server/pandora_server.redhat.spec: allow
	  tty-less sudo for pandora to fix failure on start
	  tentacle_serverd service in recent RHEL derivatives.

2014-06-12  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Removed the keepalive semaphore, since down_force
	  is not supported in earlier versions of Thread::Semaphore. Made keep alive
	  modules work with an FF threshold.

2014-06-11  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Prevent race conditions between keep_alive and
	  keep_alive_nd.

2014-06-08  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf, NetBSD/pandora_server.conf: Updated
	default settings as the same as Linux ones.
	
014-06-05  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/PluginServer.pm
	lib/PandoraFMS/Core.pm: Add tags name macro to alerts and plugins.
	Add tags phones to plugins. Ticket #568

2014-06-04  Mario Pulido  <mario.pulido@artica.es>

	* conf/pandora_server.conf.new: Fixed bug
